# AutowareAuto

./: .gitmodules  README.md
src/common/autoware_auto_geometry/design/: spatial-hash-design.md
src/common/autoware_auto_geometry/include/geometry/: common_2d.hpp  spatial_hash.hpp
src/common/autoware_auto_helper_functions/include/helper_functions/: byte_reader.hpp
src/drivers/serial_driver/include/serial_driver/: serial_driver_node.hpp
src/drivers/serial_driver/test/: test_serial_driver.cpp
src/drivers/xsens_driver/: CMakeLists.txt  package.xml
src/drivers/xsens_driver/include/xsens_driver/: xsens_base_translator.hpp  xsens_common.hpp  xsens_imu_translator.hpp
src/drivers/xsens_driver/src/: xsens_common.cpp  xsens_gps_translator.cpp  xsens_imu_config.cpp  xsens_imu_translator.cpp
src/drivers/xsens_driver/test/src/: test_xsens_gps.cpp  test_xsens_imu.cpp
src/drivers/xsens_node/: CMakeLists.txt
src/drivers/xsens_node/include/xsens_node/: xsens_common_node.hpp  xsens_imu_node.hpp
src/drivers/xsens_node/src/: xsens_gps_node.cpp  xsens_gps_node_main.cpp  xsens_imu_node.cpp  xsens_imu_node_main.cpp
src/localization/design/: localization-design.md
src/localization/ndt/: CMakeLists.txt  package.xml
src/localization/ndt/design/: ndt-design.md
src/localization/ndt/include/ndt/: ndt_map.hpp  ndt_optimization_problem.hpp  ndt_representations.hpp
src/localization/ndt/test/include/: test_ndt_map.hpp
src/localization/ndt/test/src/: test_ndt_map.cpp
src/motion/control/pure_pursuit/include/pure_pursuit/: pure_pursuit.hpp
src/motion/control/pure_pursuit/src/: pure_pursuit.cpp
src/perception/filters/voxel_grid/: package.xml
src/perception/filters/voxel_grid/include/voxel_grid/: config.hpp  voxel_grid.hpp
src/prediction/kalman_filter/include/kalman_filter/: esrcf.hpp  srcf_core.hpp
src/prediction/kalman_filter/test/include/: test_kalman_filter.hpp
src/sandbox/perception/localization/ndt_matching/: CMakeLists.txt  package.xml
src/sandbox/perception/localization/ndt_matching/include/ndt_matching/: config.hpp  ndt_base.hpp  ndt_matching.hpp  symmetric_eigen_solver.hpp  visibility_control.hpp  voxel_grid.hpp
src/sandbox/perception/localization/ndt_matching/src/: config.cpp  ndt_base.cpp  ndt_matching.cpp  voxel_grid.cpp
src/sandbox/perception/localization/ndt_matching_nodes/: CMakeLists.txt  package.xml
src/sandbox/perception/localization/ndt_matching_nodes/include/ndt_matching_nodes/: ndt_matching_node.hpp  visibility_control.hpp
src/sandbox/perception/localization/ndt_matching_nodes/launch/: ndt_matching.launch
src/sandbox/perception/localization/ndt_matching_nodes/param/: ndt_matching.param.yaml
src/sandbox/perception/localization/ndt_matching_nodes/src/: dummy.cpp  ndt_matching_node.cpp  ndt_matching_node_main.cpp
src/tools/autoware_test_tools/: CMakeLists.txt  autoware_test_tools-extras.cmake  package.xml
src/tools/autoware_test_tools/cmake/: autoware_test_tools.cmake
src/tools/autoware_test_tools/include/autoware_test_tools/: apex_test_tools.hpp
tools/ade_image/: entrypoint
