<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>autoware_test_tools</name>
  <version>0.0.1</version>
  <description>The package Autoware.Auto test tools contains helpers for tests</description>
  <maintainer email="serge.nikulin@apex.ai">Serge Nikulin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>
  <depend>osrf_testing_tools_cpp</depend>
  <depend>ament_cmake_gtest</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_nose</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_pclint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
