<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>ndt_matching</name>
    <version>0.0.1</version>
    <description>an implementation of a ndt matching</description>
    <maintainer email="yuki.tsuji@apex.ai">Yuki Tsuji</maintainer>
    <license>Apex.AI License</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>apex_cmake</buildtool_depend>

    <depend>apex_auto_msgs</depend>
    <depend>apexcpp</depend>
    <depend>apex_tf</depend>
    <depend>helper_functions</depend>
    <depend>libpcl-all-dev</depend>
    <depend>libpcl-all</depend>
    <depend>nav_msgs</depend>

    <test_depend>ament_lint_common</test_depend>
    <test_depend>apex_test_tools</test_depend>
    <test_depend>ament_cmake_pclint</test_depend>

    <export><build_type>ament_cmake</build_type></export>
</package>
